--- a/index.html
+++ b/index.html
@@ -65,37 +65,37 @@
   	<section class="app-info">
   		<div class="container">
   			<div class="row center">
-  				<div class="col s12 m6 l4">
+  				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
   					<i class="large material-icons">stay_current_portrait</i>
   					<h2>First Feature</h2>
   					<p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
   				</div>
 
-  				<div class="col s12 m6 l4">
+  				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
   					<i class="large material-icons">stay_primary_landscape</i>
   					<h2>Second Feature</h2>
   					<p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
   				</div>
 
-  				<div class="col s12 m6 l4">
+  				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
   					<i class="large material-icons">stay_primary_portrait</i>
   					<h2>Third Feature</h2>
   					<p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
   				</div>
 
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
             <i class="large material-icons">stay_current_portrait</i>
             <h2>Four Feature</h2>
             <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
           </div>
 
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
             <i class="large material-icons">stay_primary_landscape</i>
             <h2>Five Feature</h2>
             <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
           </div>
 
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
             <i class="large material-icons">stay_primary_portrait</i>
             <h2>Six Feature</h2>
             <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
@@ -110,7 +110,7 @@
           <div class="col l6 content-right">
             <img src="images/feature-img01.png" alt="feature" class="myAnimation slideInRight" data-wow-duration="2s">
           </div>
-  				<div class="col l6 myAnimation fadeInLeft" data-wow-duration="2s">
+  				<div class="col l6 myAnimation fadeInUp" data-wow-duration="2s">
   					<h2>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</h2>
   					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -121,7 +121,7 @@
   				<div class="col l6">
   					<img src="images/feature-img02.png" alt="feature" class="myAnimation slideInLeft" data-wow-duration="2s">
   				</div>
-  				<div class="col l6  myAnimation fadeInRight" data-wow-duration="2s">
+  				<div class="col l6  myAnimation fadeInUp" data-wow-duration="2s">
   					<h2>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</h2>
   					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -132,7 +132,7 @@
           <div class="col l6 content-right">
             <img src="images/feature-img01.png" alt="feature" class="myAnimation slideInRight" data-wow-duration="2s">
           </div>
-          <div class="col l6 myAnimation fadeInLeft" data-wow-duration="2s">
+          <div class="col l6 myAnimation fadeInUp" data-wow-duration="2s">
             <h2>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ ahdsd</p>
@@ -143,7 +143,7 @@
           <div class="col l6">
             <img src="images/feature-img02.png" alt="feature" class="myAnimation slideInLeft" data-wow-duration="2s">
           </div>
-          <div class="col l6 myAnimation fadeInRight" data-wow-duration="2s">
+          <div class="col l6 myAnimation fadeInUp" data-wow-duration="2s">
             <h2>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -153,7 +153,7 @@
   	</section> <!-- End Features -->
 
 		<section class="my-carousel">
-		 	<div id="carousel" class="container">
+		 	<div id="carousel" class="container myAnimation fadeInUp" data-wow-duration="2s">
 		 		<div class="item"><img src="images/img01.jpg" alt="Image"></div>
 		 		<div class="item"><img src="images/img02.jpg" alt="Image"></div>
 		 		<div class="item"><img src="images/img03.jpg" alt="Image"></div>
@@ -166,7 +166,7 @@
 		 </section> <!-- End My Carousel -->
 
     <section class="download-app" id="download-app">
-      <div class="container center">
+      <div class="container center myAnimation fadeInUp" data-wow-duration="2s">
         <h2>Download now and start working</h2>
         <a class="btn waves-effect" href="#!">
           <span class="icon-wrap"><i class="fa fa-apple"></i></span>
@@ -186,7 +186,7 @@
     </section> <!-- End Download App -->
 
     <section class="login-web-app parallax" data-speed="0.4" id="login-web-app">
-      <div class="container">
+      <div class="container myAnimation fadeInUp" ata-wow-duration="2s">
         <div class="center">
           <h2>No Mobile Device? No Problem?</h2>
           <h3>
@@ -198,7 +198,7 @@
     </section> <!-- End login Web App -->
 
     <footer id="footer">
-      <div class="container">
+      <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="row">
           <div class="col s12 l6">
            <h2>Irland</h2>
@@ -234,7 +234,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <div class="container">
+        <div class="container myAnimation fadeInUp" data-wow-duration="2s">
           <p class="center"> Copyright &copy; 2016 By Olive Media</p>
         </div>
       </div>
