--- a/employers.html
+++ b/employers.html
@@ -22,7 +22,7 @@
   <div id="wrapper">
 		<nav class="navigation">
 		  <div class="nav-wrapper">
-		    <a href="#!" class="brand-logo">Hiup</a>
+		    <a href="#!" class="brand-logo">hiup</a>
 		    <a href="#!" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		    <ul class="right hide-on-med-and-down">
 					<li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
@@ -38,7 +38,7 @@
 		</nav> <!-- End nav -->
 
   	<section class="employers-block parallax" data-speed="0.4">
-      <div class="container">
+      <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="center">
             <h2>Lorem ipsum dolor sit amet, consectetur elit</h2>
             <h3>Sed do tempor incididunt dolore</h3>
@@ -57,47 +57,47 @@
                   <label for="yourName" data-error="wrong" data-success="right">Your Name</label>
                 </div>
               </div>
-              <button class="btn waves-effect waves-yellow submit" type="submit" name="action">Browse Staff Now</button>
+              <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Browse Staff Now</button>
           </form>
         </div>
       </div>
   	</section> <!-- End Intro Block -->
 
-  	<section class="info-block">
+  	<section class="info-block myAnimation fadeInUp" data-wow-duration="2s">
   		<div class="container">
   			<div class="row center">
           <h2 class="title">How we're different</h2>
-  				<div class="col s12 m6 l4">
+  				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
   					<i class="fa fa-money fa-5x"></i>
   					<h2>First Feature</h2>
   					<p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
   				</div>
 
-  				<div class="col s12 m6 l4">
+  				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
   					<i class="fa fa-play-circle-o fa-5x"></i>
   					<h2>Second Feature</h2>
   					<p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
   				</div>
 
-  				<div class="col s12 m6 l4">
+  				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
   					<i class="fa fa-eye fa-5x"></i>
   					<h2>Third Feature</h2>
   					<p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
   				</div>
 
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
             <i class="fa fa-clock-o fa-5x"></i>
             <h2>Four Feature</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
 
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
             <i class="fa fa-road fa-5x"></i>
             <h2>Five Feature</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
 
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
             <i class="fa fa-umbrella fa-5x"></i>
             <h2>Six Feature</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
@@ -106,21 +106,21 @@
   	 </div> <!-- End container -->
     </section> <!-- End Info Block-->
 
-    <section class="work-block">
+    <section class="work-block myAnimation fadeInUp" data-wow-duration="2s">
       <div class="container">
         <div class="row center">
           <h2 class="title">How Hiup Works</h2>
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>THE JOB GETS DONE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
@@ -129,14 +129,14 @@
       </div> <!-- End container -->
     </section> <!-- End Work Block -->
 
-    <section class="testimonials">
+    <section class="testimonials myAnimation fadeInUp" data-wow-duration="2s">
       <div class="container">
         <div class="row">
-          <div class="col s12 m8 offset-m2">
+          <div class="col s12 m8 offset-m2 myAnimation fadeInUp" data-wow-duration="2s">
             <div id="testimonials-carousel">
               <div class="item">
                 <div class="testimonials-holder">
-                  <img class="img-circle" alt="" src="images/img01.jpg">
+                  <img alt="" src="images/avatar-img01.png">
                   <div class="text-wrap">
                     <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</h5>
                     <p>- Jenny McLane, Microsoft</p>
@@ -145,7 +145,7 @@
               </div>
               <div class="item">
                 <div class="testimonials-holder">
-                  <img class="img-circle" alt="" src="images/img01.jpg">
+                  <img alt="" src="images/avatar-img02.png">
                   <div class="text-wrap">
                     <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</h5>
                     <p>- Jenny McLane, Microsoft</p>
@@ -154,7 +154,7 @@
               </div>
               <div class="item">
                 <div class="testimonials-holder">
-                  <img class="img-circle" alt="" src="images/img01.jpg">
+                  <img alt="" src="images/avatar-img03.png">
                   <div class="text-wrap">
                     <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</h5>
                     <p>- Jenny McLane, Microsoft</p>
@@ -168,11 +168,11 @@
      </section> <!-- End My Carousel -->
 
     <section class="login-web-app parallax" data-speed="0.4" id="login-web-app">
-      <div class="container">
+      <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="center">
           <h2>No Mobile Device? No Problem?</h2>
           <h3>
-            <a href="#!" class="btn waves-effect waves-yellow"><i class="fa fa-sign-in"></i>LogIn</a>
+            <a href="#!" class="btn waves-effect waves-yellow myAnimation slideInLeft" data-wow-duration="2s"><i class="fa fa-sign-in"></i>LogIn</a>
             To Our Web App
           </h3>
         </div>
@@ -180,7 +180,7 @@
     </section> <!-- End login Web App -->
 
     <footer id="footer">
-      <div class="container">
+      <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="row">
           <div class="col s12 l6">
            <h2>Irland</h2>
@@ -216,7 +216,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <div class="container">
+        <div class="container myAnimation fadeInUp" data-wow-duration="2s">
           <p class="center"> Copyright &copy; 2016 By Olive Media</p>
         </div>
       </div>
