--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="wrapper">
 		<nav class="navigation">
 		  <div class="nav-wrapper">
-		    <a href="#!" class="brand-logo">Hiup</a>
+		    <a href="#!" class="brand-logo">hiup</a>
 		    <a href="#!" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		    <ul class="right hide-on-med-and-down">
 					<li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
@@ -38,19 +38,19 @@
 		</nav> <!-- End nav -->
 
   	<section class="intro-block parallax" data-speed="0.4">
-  		<div class="container">
+  		<div class="container myAnimation fadeInUp" data-wow-duration="2s">
   			<div class="center">
-  				<h2>This is the Photoshop version of lorem Ipsum</h2>
-  				<p>Morbi accumsan ipsum velit.This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+  				<h2>We Find You Work</h2>
+  				<p>Create a profile upskill and get qualified and wait for the jobs to come to you.</p>
   				<div class="download-btn">
-						<a class="btn waves-effect" href="#!">
+						<a class="btn waves-effect myAnimation slideInLeft" data-wow-duration="2s" href="#!">
 							<span class="icon-wrap"><i class="fa fa-apple"></i></span>
 							<span class="text-wrap">
 								<span class="top-text">Download On The</span>
 								<span class="bottom-text">Apple Store</span>
 							</span>
 						</a>
-						<a class="btn waves-effect" href="#!">
+						<a class="btn waves-effect myAnimation slideInRight" data-wow-duration="2s" href="#!">
 							<span class="icon-wrap"><i class="fa fa-android"></i></span>
 							<span class="text-wrap">
 								<span class="top-text">Download On The</span>
@@ -64,41 +64,42 @@
 
   	<section class="app-info">
   		<div class="container">
-  			<div class="row center">
+  			<div class="row center sameHeight">
+          <h2>How to get a job</h2>
   				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
-  					<i class="large material-icons">stay_current_portrait</i>
-  					<h2>First Feature</h2>
-  					<p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
+            <i class="large material-icons">cloud_download</i>
+  					<h2>Download App</h2>
+  					<p>Hiup is the new way to learn new skills and get work in construction, retail and hospitality - all on your phone download for ios or login in here.</p>
   				</div>
 
   				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
-  					<i class="large material-icons">stay_primary_landscape</i>
-  					<h2>Second Feature</h2>
-  					<p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
+  					<i class="large material-icons">cloud_upload</i>
+  					<h2>Complete your profile</h2>
+  					<p>Sign up, complete your profile and register your work preference. Simply wait for work to come to you!</p>
   				</div>
 
   				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
-  					<i class="large material-icons">stay_primary_portrait</i>
-  					<h2>Third Feature</h2>
-  					<p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
+  					<i class="large material-icons">school</i>
+  					<h2>Upskill</h2>
+  					<p>As well as providing work we offer you the options to take courses which will strengthen your application resulting in more job offers and more money.</p>
   				</div>
 
           <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
-            <i class="large material-icons">stay_current_portrait</i>
-            <h2>Four Feature</h2>
+            <i class="large material-icons">notifications_active</i>
+            <h2>Get Notifications</h2>
             <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
           </div>
 
           <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
-            <i class="large material-icons">stay_primary_landscape</i>
-            <h2>Five Feature</h2>
+            <i class="large material-icons">touch_app</i>
+            <h2>Apply</h2>
             <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
           </div>
 
           <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
-            <i class="large material-icons">stay_primary_portrait</i>
-            <h2>Six Feature</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
+            <i class="large material-icons">work</i>
+            <h2>Job for life</h2>
+            <p>Once registered you will not need to look anywhere else. Before your contract finishes you can line up  your next contract so you are never out of work!</p>
           </div>
   			</div> <!-- End row -->
   	 </div> <!-- End container -->
@@ -168,14 +169,14 @@
     <section class="download-app" id="download-app">
       <div class="container center myAnimation fadeInUp" data-wow-duration="2s">
         <h2>Download now and start working</h2>
-        <a class="btn waves-effect" href="#!">
+        <a class="btn waves-effect myAnimation slideInLeft" data-wow-duration="2s" href="#!">
           <span class="icon-wrap"><i class="fa fa-apple"></i></span>
           <span class="text-wrap">
             <span class="top-text">Download On The</span>
             <span class="bottom-text">Apple Store</span>
           </span>
         </a>
-        <a class="btn waves-effect" href="#!">
+        <a class="btn waves-effect myAnimation slideInRight" data-wow-duration="2s" href="#!">
           <span class="icon-wrap"><i class="fa fa-android"></i></span>
           <span class="text-wrap">
             <span class="top-text">Download On The</span>
@@ -190,23 +191,36 @@
         <div class="center">
           <h2>No Mobile Device? No Problem?</h2>
           <h3>
-            <a href="#!" class="btn waves-effect waves-yellow"><i class="fa fa-sign-in"></i>LogIn</a>
+            <a href="#!" class="btn waves-effect waves-yellow myAnimation slideInLeft" data-wow-duration="2s"><i class="fa fa-sign-in"></i>LogIn</a>
             To Our Web App
           </h3>
         </div>
       </div>
     </section> <!-- End login Web App -->
 
+     <div class="container">
+        <h2 class="center">Work with great companies</h2>
+        <div id="work-carousel">
+         <div class="item"><img src="images/aramark-logo.jpg" alt="aramark"></div>
+         <div class="item"><img src="images/skanska-logo.jpg" alt="skanska"></div>
+         <div class="item"><img src="images/battersea-logo.jpg" alt="battersea"></div>
+         <div class="item"><img src="images/balfour_beatty-logo.jpg" alt="balfourbeatty"></div>
+         <div class="item"><img src="images/knight_harwood.jpg" alt="Image"></div>
+         <div class="item"><img src="images/mcalpine-logo.jpg" alt="Image"></div>
+       </div>
+     </div>
+
     <footer id="footer">
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="row">
           <div class="col s12 l6">
-           <h2>Irland</h2>
-           <p>Red cow business park</p>
-           <ul class="contact-info-lists">
-             <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-map-marker"></i></span>Clondalkin, Dublin22, Irland</a></li>
-             <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-phone"></i></span>+111 111 111 1111</a></li>
-           </ul>
+            <a href="#!" class="brand-logo">hiup</a>
+            <h3>We find you work</h3>
+            <ul class="contact-info-lists">
+              <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-map-marker"></i></span>Hiup HQ, Corsham Street, London, N1 6DR</a></li>
+              <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-phone"></i></span>+111 111 111 1111</a></li>
+              <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-envelope-o"></i></span>hello@hiupapp.com</a></li>
+            </ul>
          </div>
          <div class="col s12 l6">
             <form action="#!">
@@ -248,6 +262,7 @@
 	<script src="js/jquery-scrolltofixed.min.js"></script>
 	<script src="js/jquery.simpleparallax.min.js"></script>
 	<script src="js/wow.min.js"></script>
+  <script src="js/jquery.matchHeight.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
