all done for index page

--- a/index.html
+++ b/index.html
@@ -64,39 +64,39 @@
 
   	<section class="app-info">
   		<div class="container">
-  			<div class="row center sameHeight">
+  			<div class="row center">
           <h2>How to get a job</h2>
-  				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+  				<div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">cloud_download</i>
   					<h2>Download App</h2>
-  					<p>Hiup is the new way to learn new skills and get work in construction, retail and hospitality - all on your phone download for ios or login in here.</p>
+  					<p>Hiup is the new way to learn new skills and get work in construction, retail and hospitality - all on your phone download for ios or login in here.Hiup is the new way to learn new skills and get work in construction, retail and hospitality - all on your phone download for ios or login in here.</p>
   				</div>
 
-  				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+  				<div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<i class="large material-icons">cloud_upload</i>
   					<h2>Complete your profile</h2>
   					<p>Sign up, complete your profile and register your work preference. Simply wait for work to come to you!</p>
   				</div>
 
-  				<div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+  				<div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<i class="large material-icons">school</i>
   					<h2>Upskill</h2>
   					<p>As well as providing work we offer you the options to take courses which will strengthen your application resulting in more job offers and more money.</p>
   				</div>
 
-          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">notifications_active</i>
             <h2>Get Notifications</h2>
             <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
           </div>
 
-          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">touch_app</i>
             <h2>Apply</h2>
             <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
           </div>
 
-          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">work</i>
             <h2>Job for life</h2>
             <p>Once registered you will not need to look anywhere else. Before your contract finishes you can line up  your next contract so you are never out of work!</p>
