remove text from p

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   				<div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">cloud_download</i>
   					<h2>Download App</h2>
-  					<p>Hiup is the new way to learn new skills and get work in construction, retail and hospitality - all on your phone download for ios or login in here.Hiup is the new way to learn new skills and get work in construction, retail and hospitality - all on your phone download for ios or login in here.</p>
+  					<p>Hiup is the new way to learn new skills and get work in construction, retail and hospitality - all on your phone download for ios or login in here.</p>
   				</div>
 
   				<div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
