home page is done

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
   		</div> <!-- End container -->
   	</section> <!-- End Intro Block -->
 
-  	<section class="app-info">
+  	<section class="job-info">
   		<div class="container">
   			<div class="row center">
-          <h2>How to get a job</h2>
+          <h2 class="title">How to get a job</h2>
   				<div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">cloud_download</i>
   					<h2>Download App</h2>
