--- a/employers.html
+++ b/employers.html
@@ -41,27 +41,101 @@
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="center">
             <h2>Lorem ipsum dolor sit amet, consectetur elit</h2>
-            <h3>Sed do tempor incididunt dolore</h3>
+            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit. sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
             <form action="#!">
-              <div class="row">
-                <div class="input-field col s12 m4">
-                  <input id="companyName" type="text" class="validate">
-                  <label for="companyName" data-error="wrong" data-success="right">Company Name</label>
-                </div>
-                <div class="input-field col s12 m4">
-                  <input id="emailAddress" type="email" class="validate">
-                  <label for="emailAddress" data-error="wrong" data-success="right">Email Address</label>
-                </div>
-                <div class="input-field col s12 m4">
-                  <input id="yourName" type="text" class="validate">
-                  <label for="yourName" data-error="wrong" data-success="right">Your Name</label>
-                </div>
-              </div>
-              <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Browse Staff Now</button>
+              <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Login</button>
           </form>
         </div>
       </div>
   	</section> <!-- End Intro Block -->
+
+    <section class="recruters-block">
+      <div class="container myAnimation fadeInUp" data-wow-duration="2s">
+        <h2 class="center">Recruiters Using Hiup</h2>
+        <div id="recruters" class="owl-carousel">
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+          <div class="item">
+            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <p class="company">Company</p>
+            <p class="country">Country</p>
+          </div>
+        </div>
+      </div>
+     </section> <!-- End My Carousel -->
 
   	<section class="info-block myAnimation fadeInUp" data-wow-duration="2s">
   		<div class="container">
@@ -109,18 +183,33 @@
     <section class="work-block myAnimation fadeInUp" data-wow-duration="2s">
       <div class="container">
         <div class="row center">
-          <h2 class="title">How Hiup Works</h2>
-          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+          <h2 class="title">What we provide</h2>
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
-          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>THE JOB GETS DONE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
-          <div class="col s12 m6 l4 myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
+            <i class="fa fa-money fa-5x"></i>
+            <h2>CHOOSE</h2>
+            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+          </div>
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
+            <i class="fa fa-money fa-5x"></i>
+            <h2>CHOOSE</h2>
+            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+          </div>
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
+            <i class="fa fa-money fa-5x"></i>
+            <h2>THE JOB GETS DONE</h2>
+            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+          </div>
+          <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
@@ -131,6 +220,7 @@
 
     <section class="testimonials myAnimation fadeInUp" data-wow-duration="2s">
       <div class="container">
+        <h2 class="center">What Our Clients Says</h2>
         <div class="row">
           <div class="col s12 m8 offset-m2 myAnimation fadeInUp" data-wow-duration="2s">
             <div id="testimonials-carousel">
@@ -167,28 +257,17 @@
       </div>
      </section> <!-- End My Carousel -->
 
-    <section class="login-web-app parallax" data-speed="0.4" id="login-web-app">
-      <div class="container myAnimation fadeInUp" data-wow-duration="2s">
-        <div class="center">
-          <h2>No Mobile Device? No Problem?</h2>
-          <h3>
-            <a href="#!" class="btn waves-effect waves-yellow myAnimation slideInLeft" data-wow-duration="2s"><i class="fa fa-sign-in"></i>LogIn</a>
-            To Our Web App
-          </h3>
-        </div>
-      </div>
-    </section> <!-- End login Web App -->
-
     <footer id="footer">
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="row">
           <div class="col s12 l6">
-           <h2>Irland</h2>
-           <p>Red cow business park</p>
-           <ul class="contact-info-lists">
-             <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-map-marker"></i></span>Clondalkin, Dublin22, Irland</a></li>
-             <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-phone"></i></span>+111 111 111 1111</a></li>
-           </ul>
+            <a href="#!" class="brand-logo">hiup</a>
+            <h3>We find you work</h3>
+            <ul class="contact-info-lists">
+              <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-map-marker"></i></span>Hiup HQ, Corsham Street, London, N1 6DR</a></li>
+              <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-phone"></i></span>+111 111 111 1111</a></li>
+              <li><a href="#!"><span class="btn waves-effect waves-yellow"><i class="fa fa-envelope-o"></i></span>hello@hiupapp.com</a></li>
+            </ul>
          </div>
          <div class="col s12 l6">
             <form action="#!">
@@ -230,6 +309,7 @@
 	<script src="js/jquery-scrolltofixed.min.js"></script>
 	<script src="js/jquery.simpleparallax.min.js"></script>
 	<script src="js/wow.min.js"></script>
+  <script src="js/jquery.matchHeight.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
