--- a/index.html
+++ b/index.html
@@ -198,17 +198,19 @@
       </div>
     </section> <!-- End login Web App -->
 
-     <div class="container">
-        <h2 class="center">Work with great companies</h2>
-        <div id="work-carousel">
-         <div class="item"><img src="images/aramark-logo.jpg" alt="aramark"></div>
-         <div class="item"><img src="images/skanska-logo.jpg" alt="skanska"></div>
-         <div class="item"><img src="images/battersea-logo.jpg" alt="battersea"></div>
-         <div class="item"><img src="images/balfour_beatty-logo.jpg" alt="balfourbeatty"></div>
-         <div class="item"><img src="images/knight_harwood.jpg" alt="Image"></div>
-         <div class="item"><img src="images/mcalpine-logo.jpg" alt="Image"></div>
+     <section class="company-block">
+       <div class="container">
+          <h2 class="center">Work with great companies</h2>
+          <div id="work-carousel">
+           <div class="item"><img src="images/aramark-logo.jpg" alt="aramark"></div>
+           <div class="item"><img src="images/skanska-logo.jpg" alt="skanska"></div>
+           <div class="item"><img src="images/battersea-logo.jpg" alt="battersea"></div>
+           <div class="item"><img src="images/balfour_beatty-logo.jpg" alt="balfourbeatty"></div>
+           <div class="item"><img src="images/knight_harwood.jpg" alt="Image"></div>
+           <div class="item"><img src="images/mcalpine-logo.jpg" alt="Image"></div>
+          </div>
        </div>
-     </div>
+     </section>
 
     <footer id="footer">
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
